--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
 }
 
@@ -21,7 +22,28 @@ main {
 .game-title {
   font-size: 50px;
   padding: 0 0 80px 0;
+  text-align: center;
 }
+
+@media (max-width: 1025px) {
+  .game-title {
+    padding: 10px 0 0 0;
+  }
+}
+
+@media (max-width: 414px) {
+  .game-title {
+    padding: 0 0 40px 0;
+  }
+}
+
+@media (max-width: 376px) {
+  .game-title {
+    font-size: 40px;
+    padding: 0 0 10px 0;
+  }
+}
+
 
 .moves-div {
   padding: 0 0 30px 0;
@@ -35,7 +57,7 @@ main {
   padding: 6px;
   margin: 0 12px;
   transition: all 0.15s ease;
-  
+
   &:hover {
     cursor: pointer;
     box-shadow: 0 0 14px #F6F1E9;
@@ -49,7 +71,7 @@ main {
   justify-content: center;
   align-items: center;
   font-size: 16px;
-  font-family: "IBM plex mono", "Roboto",Arial, Helvetica, sans-serif;
+  font-family: "IBM plex mono", "Roboto", Arial, Helvetica, sans-serif;
   padding: 0 0 20px 0;
 }
 
