--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,8 @@ main {
 }
 
 .game-title {
-  font-size: 50px;
-  padding: 0 0 80px 0;
+  font-size: 36px;
+  padding: 0 0 30px 0;
   text-align: center;
 }
 
@@ -33,20 +33,35 @@ main {
 
 @media (max-width: 414px) {
   .game-title {
-    padding: 0 0 40px 0;
+    padding: 0 0 20px 0;
   }
 }
 
 @media (max-width: 376px) {
   .game-title {
-    font-size: 40px;
+    font-size: 34px;
     padding: 0 0 10px 0;
   }
 }
 
+.stats {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-family: "IBM plex mono", "Roboto", Arial, Helvetica, sans-serif;
+  padding: 0 0 40px 0;
+  margin: 0;
+}
+
+.js-result-el {
+  font-weight: 700;
+  font-size: 18px;
+}
 
 .moves-div {
-  padding: 0 0 30px 0;
+  padding: 0 0 90px 0;
 }
 
 .move-btn {
@@ -65,19 +80,40 @@ main {
   }
 }
 
-.stats {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  font-size: 16px;
-  font-family: "IBM plex mono", "Roboto", Arial, Helvetica, sans-serif;
-  padding: 0 0 20px 0;
+@media (max-width: 431px) {
+  .move-btn {
+    font-size: 68px;
+  }
 }
 
-.js-result-el {
-  font-weight: 700;
-  font-size: 18px;
+@media (max-width: 415px) {
+  .move-btn {
+    font-size: 62px;
+  }
+}
+
+@media (max-width: 391px) {
+  .move-btn {
+    font-size: 58px;
+  }
+}
+
+@media (max-width: 376px) {
+  .move-btn {
+    font-size: 54px;
+  }
+}
+
+@media (max-width: 361px) {
+  .move-btn {
+    font-size: 50px;
+  }
+}
+
+@media (max-width: 345px) {
+  .move-btn {
+    font-size: 46px;
+  }
 }
 
 .reset-score-btn {
@@ -87,11 +123,18 @@ main {
   color: white;
   border: none;
   border-radius: 10px;
-  padding: 10px 14px;
+  padding: 12px 14px;
   transition: all 0.15s ease;
 
   &:hover {
     cursor: pointer;
     background-color: #be2828;
+  }
+}
+
+@media (max-width: 600px) {
+  .reset-score-btn {
+    font-size: 22px;
+    padding: 16px 20px;
   }
 }
